--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ nav {
 
 /* Home Section */
 #home {
-  background: url('path-to-your-image.jpg') no-repeat center center;
+  background: url('images/banner.jpg') no-repeat center center;
   background-size: cover;
   padding: 50px 0;
   color: white;
