--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
 /* Global Styles */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif; /* Usando una fuente externa como respaldo */
   margin: 0;
   padding: 0;
+  font-size: 16px; /* Tamaño base para una mejor legibilidad */
+  line-height: 1.5; /* Mejora la legibilidad */
+  color: #333; /* Color de texto para mejorar el contraste */
 }
 
 .container {
@@ -19,7 +22,8 @@ header {
 
 header .logo h1 {
   text-align: center;
-  font-size: 36px; /* Aumentado el tamaño del logo */
+  font-size: 2.5rem; /* Tamaño aumentado */
+  font-family: 'Roboto', Arial, sans-serif; /* Aplicando la fuente 'Roboto' */
   color: #ff5f5f; /* Color del logo */
 }
 
@@ -63,18 +67,21 @@ nav {
 #home h1 {
   text-align: center;
   font-size: 2.5rem;
+  font-family: 'Roboto', Arial, sans-serif; /* Aplicando la fuente 'Roboto' */
   margin-bottom: 20px;
 }
 
 #home p {
   text-align: center;
   font-size: 1.2rem;
+  font-family: 'Roboto', Arial, sans-serif; /* Aplicando la fuente 'Roboto' */
 }
 
 /* Search Form */
 section h2 {
   text-align: center;
   margin-bottom: 20px;
+  font-family: 'Roboto', Arial, sans-serif; /* Fuente más legible */
 }
 
 form {
@@ -108,6 +115,7 @@ form button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-family: 'Roboto', Arial, sans-serif; /* Fuente legible en botones */
 }
 
 /* Responsive Design */
