--- a/main.css
+++ b/main.css
@@ -980,6 +980,11 @@ form button:hover {
   background-color: #f9f9f9;
 }
 
+.gallery-container {
+  max-width: 800px; /* Tamaño más pequeño para la galería */
+  margin: 0 auto; /* Centrar la galería */
+}
+
 #gallery header h2 {
   font-size: 2rem;
   font-weight: bold;
@@ -997,48 +1002,42 @@ form button:hover {
   margin-bottom: 30px;
 }
 
-/* Estilo de las filas de la galería */
-.gallery-row {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 20px;
+/* Estilo de la galería con Grid */
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Columnas distribuidas uniformemente */
+  gap: 5px; /* Espaciado mínimo entre imágenes */
 }
 
-.gallery-row figure {
+.gallery-grid figure {
   margin: 0;
-  width: 20%; /* Ajusta el tamaño de las imágenes */
+  padding: 0; /* Elimina cualquier espacio adicional alrededor de las figuras */
+  width: 100%; /* Asegura que las figuras ocupen todo el espacio disponible */
 }
 
-.gallery-row figure img {
+.gallery-grid figure img {
   width: 100%;
   height: auto;
-  border-radius: 8px; /* Bordes redondeados */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+  border-radius: 5px; /* Bordes redondeados más sutiles */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra más ligera */
   transition: transform 0.3s ease;
 }
 
-.gallery-row figure img:hover {
+.gallery-grid figure img:hover {
   transform: scale(1.05); /* Efecto de zoom al pasar el mouse */
 }
 
+@media (max-width: 1024px) {
+  .gallery-grid {
+    grid-template-columns: repeat(2, 1fr); /* Dos columnas para pantallas medianas */
+  }
+}
+
 @media (max-width: 768px) {
-  .gallery-row {
-    flex-direction: column; /* Cambia la disposición de las imágenes a columna */
-    align-items: center; /* Centra las imágenes verticalmente */
-  }
-
-  .gallery-row figure {
-    width: 80%; /* Hace las imágenes más grandes en pantallas pequeñas */
+  .gallery-grid {
+    grid-template-columns: 1fr; /* Una sola columna en pantallas pequeñas */
   }
 }
-
-@media (max-width: 480px) {
-  .gallery-row figure {
-    width: 100%; /* Las imágenes ocupan el 100% en pantallas muy pequeñas */
-  }
-}
-
 /* General styles Testimonial*/
 
 #testimonial {
